[tool.poetry]
name = "streamlit-coleta-aovivoo"
version = "0.1.0"
description = ""
authors = ["Danie Marques de Almeida <danielmarques.enfermagem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
streamlit = "^1.37.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.32"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
